@@ -2,8 +2,9 @@ import scoverage.ScoverageSbtPlugin.ScoverageKeys.coverageHighlighting
 
 lazy val buildSettings = Seq(
   organization := "com.geirsson",
+  // See core/src/main/scala/org/scalafmt/Versions.scala
   version :=  org.scalafmt.Versions.nightly,
-  scalaVersion :=  "2.11.8",
+  scalaVersion :=  org.scalafmt.Versions.scala,
   updateOptions := updateOptions.value.withCachedResolution(true),
   // Many useful rules are ignored, at least they're explicitly ignored.
   wartremoverWarnings in (Compile, compile) ++=
@@ -135,7 +136,6 @@ lazy val core = project
 
 lazy val macros = project
   .settings(allSettings)
-  .settings(noPublish)
   .settings(
     moduleName := "scalafmt-macros",
     libraryDependencies ++= Seq(
@@ -158,6 +158,7 @@ lazy val cli = project
 
 lazy val scalafmtSbt = project
   .settings(allSettings)
+  .settings(ScriptedPlugin.scriptedSettings)
   .settings(
     coverageHighlighting := false,
     sbtPlugin := true,
@@ -165,7 +166,13 @@ lazy val scalafmtSbt = project
     // In convention of sbt plugins, the module is sbt-scalafmt instead of scalafmt-sbt.
     moduleName := "sbt-scalafmt",
     sources in Compile +=
-      baseDirectory.value / "../core/src/main/scala/org/scalafmt/Versions.scala"
+      baseDirectory.value / "../core/src/main/scala/org/scalafmt/Versions.scala",
+    scriptedLaunchOpts := Seq(
+      "-Dplugin.version=" + version.value,
+      // .jvmopts is ignored, simulate here
+      "-XX:MaxPermSize=256m", "-Xmx2g", "-Xss2m"
+    ),
+    scriptedBufferLog := false
   )
 
 lazy val benchmarks = project
